--- a/web/lib/javaxt/javaxt.css
+++ b/web/lib/javaxt/javaxt.css
@@ -45,6 +45,16 @@ input, select, textarea { /* Allows overriding native style of form elements on 
 }
 
 
+.noselect, .javaxt-noselect {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    -ms-user-select: none;
+    -khtml-user-select: none;
+    user-select: none;
+}
+
+
 /**************************************************************************/
 /** Panel
 /**************************************************************************/
@@ -131,12 +141,16 @@ input, select, textarea { /* Allows overriding native style of form elements on 
 
 /* Padding for button icons */
 .toolbar-button-icon {
-    margin: 0 3px 0 0px;
+    margin: 0 5px 0 0px;
 }
 
-/* Menu pulldown icon */
+/* Menu pulldown icon (triangle) */
 .toolbar-button-menu-icon {
-
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid #525252;
     margin-left: 10px;
 }
 
@@ -282,9 +296,21 @@ input, select, textarea { /* Allows overriding native style of form elements on 
     margin-left: 10px;
 }
 
+.form-button:disabled,
+.form-button[disabled]{
+    opacity:0.75;
+    box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0.2);
+    cursor:default;
+}
+
 .form-button:hover {
     background-color: #d2e3ed;
     border-color: rgba(82, 168, 236, 0.8);
+}
+
+.form-button:disabled:hover {
+    background-color: #e4e4e4;
+    border: 1px solid #b4b4b4;
 }
 
 .form-button:active {
@@ -414,6 +440,47 @@ select:focus, textarea:focus, input:focus{
 
 
 /**************************************************************************/
+/** Menu Buttons
+/**************************************************************************/
+/** The following classes are used to define the style for buttons found in
+ *  a button menu.
+ */
+
+.menu-panel {
+    border: 1px solid #adadad;
+    /*border-top: 0px;*/
+    background: #f0f0f0;
+    cursor: pointer;
+    padding: 3px 3px;
+    z-index: 1;
+    box-shadow: 0 12px 14px 0 rgba(0, 0, 0, 0.2), 0 13px 20px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 0 0 3px 3px;
+    margin-top: -1px;
+    width: 150px;
+}
+
+.menu-button {
+    height: 28px;
+    border: 1px solid rgba(0,0,0,0);
+    border-radius: 3px;
+    /*background: #F6F6F6;*/
+    cursor: pointer;
+    padding: 0px 6px;
+    margin: 0px;
+    color: #2b2b2b;
+}
+
+.menu-button-hover {
+    border-color: #cccccc;
+    background: #f0f8ff;
+}
+
+.menu-button-icon {
+    margin: 0 6px 0 0;
+}
+
+
+/**************************************************************************/
 /** Window
 /**************************************************************************/
 /** The following classes are used to define the style for windows and
@@ -428,7 +495,6 @@ select:focus, textarea:focus, input:focus{
 }
 
 .window-header {
-
     background: #0f6391;
     height: 36px;
     cursor: default;
@@ -442,7 +508,6 @@ select:focus, textarea:focus, input:focus{
 }
 
 .window-title {
-
     color: white;
     text-align: center;
     white-space: nowrap;
@@ -456,13 +521,24 @@ select:focus, textarea:focus, input:focus{
     padding-left: 9px;
 }
 
+.window-header-button-bar {
+    position: absolute;
+    right: 0;
+    padding: 6px 7px 0 0;
+}
+
 .window-header-button {
-    width: 18px;
-    height: 18px;
     font-size: 18px;
     border: 0;
     color: #ffffff;
     cursor: pointer;
+    padding: 5px;
+}
+
+.window-header-button:hover {
+    background-color:#5b9bd2;
+    transition: 0.1s;
+    border-radius: 3px;
 }
 
 .window-mask {
@@ -475,6 +551,9 @@ select:focus, textarea:focus, input:focus{
     background-color: #cb6400;
 }
 
+.alert-header .window-header-button:hover {
+    background-color: #ea985c;
+}
 
 
 
@@ -484,19 +563,22 @@ select:focus, textarea:focus, input:focus{
 /** Default style for grid controls
  */
 .table-header {
-    border-bottom: 1px solid #8f8f8f;
+    height: 36px; /*table-header-col height + border */
+    border-bottom: 1px solid #ababab;
     background: #eaeaea;
-    background-image: none;
     background-image: linear-gradient(to bottom, #f9f9f9, #e4e5e7);
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+    /* box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19); */
 }
 
 .table-row, .table-row-selected {
+    background: #ffffff;
     border-bottom: 1px solid #cccccc;
 }
 
 /* .table-row:nth-child(even) {background: #CCC} */
-.table-row:nth-child(odd) {background: #F8F8F8}
+.table-row:nth-child(odd) {
+    background: #F8F8F8;
+}
 
 
 .table-row:hover{
@@ -519,8 +601,6 @@ select:focus, textarea:focus, input:focus{
     line-height: 35px;
 
 
-    border-left: 1px solid #cccccc;
-    border-right: 1px solid #cccccc;
     padding: 0 5px;
     color: #272727;
 
@@ -532,7 +612,13 @@ select:focus, textarea:focus, input:focus{
 }
 
 .table-header-col {
+    border-left: 1px solid #cccccc;
+    border-right: 1px solid #cccccc;
     cursor: pointer;
+}
+
+.table-header-col:first-child{
+    border-left: none;
 }
 
 .table-col {
@@ -548,7 +634,6 @@ select:focus, textarea:focus, input:focus{
 }
 
 
-
 .table-checkbox {
     width: 13px;
     height: 13px;
@@ -560,8 +645,27 @@ select:focus, textarea:focus, input:focus{
     color: #2b2b2b
 }
 
-
 .table-checkbox {
     border: 1px solid #9c9c9c;
     background: #fff;
+}
+
+/* Up/down triangles that appear in the header */
+.table-icon-sort-asc, .table-icon-sort-desc {
+    width: 0;
+    height: 0;
+    position: absolute;
+    margin: -8px 0 0 5px;
+}
+
+.table-icon-sort-asc {
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 5px solid #525252;
+}
+
+.table-icon-sort-desc {
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid #525252;
 }
